--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-collapsible-toolbar": "^0.1.2",
+    "react-native-collapsingtoolbar": "^1.0.3",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
