--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-native-collapsingtoolbar": "^1.0.3",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-maps": "^0.27.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-view-slider": "^1.1.1",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
