--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "react-native-customisable-switch": "github:baderahmed/react-native-customisable-switch#master",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-image-picker": "^2.3.1",
     "react-native-maps": "^0.27.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-switch": "^1.5.0",
     "react-native-view-slider": "^1.1.1",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "expo-image-picker": "~8.0.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
