--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/drawer": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
@@ -31,7 +32,8 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-switch": "^1.5.0",
     "react-native-view-slider": "^1.1.1",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "rn-range-slider": "^1.3.2"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
