--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-image-picker": "^2.3.1",
+    "react-native-key-value-storage": "^3.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-maps": "^0.27.0",
     "react-native-reanimated": "~1.4.0",
