Dodano podstawowe walidacje, rozpoczeto bcrypta oraz implementacje walidacji w ekranach

--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "expo": "~36.0.0",
     "expo-image-picker": "~8.0.1",
     "expo-linear-gradient": "~8.0.0",
+    "isaac": "0.0.5",
+    "path": "^0.12.7",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-bcrypt": "^2.4.0",
     "react-native-collapsible-toolbar": "^0.1.2",
     "react-native-collapsingtoolbar": "^1.0.3",
     "react-native-customisable-switch": "github:baderahmed/react-native-customisable-switch#master",
