--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-community/masked-view": "0.1.5",
+    "@react-native-community/slider": "^2.0.9",
     "@react-navigation/drawer": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
@@ -31,6 +32,7 @@
     "react-native-key-value-storage": "^3.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-maps": "^0.27.0",
+    "react-native-multiple-select": "^0.5.5",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
