--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-sectioned-multi-select": "^0.7.7",
     "react-native-switch": "^1.5.0",
     "react-native-view-slider": "^1.1.1",
     "react-native-web": "~0.11.7",
