--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@ptomasroos/react-native-multi-slider": "^2.2.2",
-    "@react-native-community/masked-view": "0.1.5",
-    "@react-native-community/slider": "^2.0.9",
+    "@react-native-community/masked-view": "^0.1.5",
     "@react-navigation/drawer": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
@@ -23,22 +21,15 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-bcrypt": "^2.4.0",
-    "react-native-collapsible-toolbar": "^0.1.2",
-    "react-native-collapsingtoolbar": "^1.0.3",
     "react-native-customisable-switch": "github:baderahmed/react-native-customisable-switch#master",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-image-picker": "^2.3.1",
-    "react-native-key-value-storage": "^3.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
-    "react-native-maps": "^0.27.0",
-    "react-native-multiple-select": "^0.5.5",
-    "react-native-reanimated": "~1.4.0",
+    "react-native-maps": "^0.26.1",
+    "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
-    "react-native-sectioned-multi-select": "^0.7.7",
-    "react-native-switch": "^1.5.0",
-    "react-native-view-slider": "^1.1.1",
     "react-native-web": "~0.11.7",
     "rn-range-slider": "^1.3.2"
   },
