--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
     "expo": "~36.0.0",
+    "expo-google-app-auth": "^8.1.0",
     "expo-image-picker": "~8.0.1",
     "expo-linear-gradient": "~8.0.0",
     "isaac": "0.0.5",
