--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
-    "rn-range-slider": "^1.3.2"
+    "rn-range-slider": "^1.3.2",
+    "expo-facebook": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
