--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@react-navigation/drawer": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
+    "axios": "^0.19.2",
+    "axios-cache-plugin": "^0.1.0",
     "expo": "~36.0.0",
+    "expo-facebook": "~8.0.0",
     "expo-google-app-auth": "^8.1.0",
     "expo-image-picker": "~8.0.1",
     "expo-linear-gradient": "~8.0.0",
@@ -32,8 +35,7 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
-    "rn-range-slider": "^1.3.2",
-    "expo-facebook": "~8.0.0"
+    "rn-range-slider": "^1.3.2"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
